# vd-verifier

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  Cross.toml  README.md  vd-verifier.nuspec
.dependabot/: config.yml
docker/: Dockerfile
install/: install.ps1  install.sh  io.github.vd.template.json  uninstall.ps1  uninstall.ps1e  uninstall.sh
src/: main.rs  pgp_gpgme.rs  pgp_sequoia.rs  vdv.rs
tests/: forged.txt  integration.rs  message.txt  message.txt.asc  message.txt.fail.sha256  message.txt.fail.sha256.asc  message.txt.notadded.asc  message.txt.notpresent.sha256  message.txt.oneline.fallback.sha256  message.txt.sha256  message.txt.sha256.asc  private-not-added.gpg  private-not-added.gpg.rev  public.gpg  sha256sums  sha256sums.gpg  test-private.gpg
tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
