[package]
name = "vd-verifier"
description = "The other half of vd browser extension"
version = "0.3.0"
license = "GPL-3.0-or-later"
authors = ["Martin Matous <matous-dev@criptext.com>"]
edition = "2018"
keywords = ["verify", "downloads", "browser", "firefox", "extension", ]
readme = "README.md"
repository = "https://github.com/mmatous/vd-verifier"
categories = ["cryptography"]
publish = false

[dependencies]
byteorder = "1"
dirs = { version = "2.0.2", optional = true }
failure = "0.1"
gpgme = { version = "0.9.0", optional = true }
hex = "0.3"
regex = "1"
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sequoia-openpgp = { git = "https://gitlab.com/sequoia-pgp/sequoia", optional = true }

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"
gpgme = { version = "0.9.0" }

[profile.release]
lto = true

[features]
default = ["pgp-sequoia"]

pgp-gpgme = ["gpgme"]
pgp-sequoia = ["dirs", "sequoia-openpgp"]
