[package]
name = "vd-verifier"
description = "The other half of vd browser extension"
version = "0.3.0"
license = "GPL-3.0-or-later"
authors = ["Martin Matous <matous-dev@criptext.com>"]
edition = "2018"
keywords = ["verify", "downloads", "browser", "firefox", "extension", ]
readme = "README.md"
repository = "https://github.com/mmatous/vd-verifier"
categories = ["cryptography"]
publish = false

[dependencies]
byteorder = "1"
failure = "0.1"
gpgme = "0.9.0"
hex = "0.3"
regex = "1"
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"

[profile.release]
lto = true
