[package]
name = "vd-verifier"
description = "The other half of vd browser extension"
version = "0.3.0"
license = "GPL-3.0-or-later"
authors = ["Martin Matous <matous-dev@criptext.com>"]
edition = "2018"
keywords = ["verify", "downloads", "browser", "firefox", "extension", ]
readme = "README.md"
repository = "https://github.com/mmatous/vd-verifier"
categories = ["cryptography"]
publish = false

[dependencies]
byteorder = "1"
failure = "0.1"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.8.1"
sha2 = "0.8.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
gpgme = "0.9.2"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"

[profile.release]
lto = true
